Fix row wrapping.

--- a/src/containers/Table.scss
+++ b/src/containers/Table.scss
@@ -1,6 +1,7 @@
 @import "../index";
 
 .table {
+  width: 460pt;
   > * {
     > * {
       padding: 6pt 0;
